--- a/catalog.html
+++ b/catalog.html
@@ -52,11 +52,11 @@
           </li>
         </ol>
         <section class="catalog-filters">
-          <h2 class="visually-hidden">Фильтры</h2>
+          <h2 class="visually-hidden" hidden>Фильтры</h2>
           <form class="catalog-filters-form" action="https://echo.htmlacademy.ru/" method="get">
-            <fieldset class="catalog-filters-group">
+            <fieldset class="catalog-filters-group-infrastructure">
               <legend class="catalog-filter-title">Инфраструктура</legend>
-              <ul class="catalog-filter-list">
+              <ul class="catalog-filter-list ">
                 <li class="catalog-filter-item">
                   <input class="control-input" type="checkbox" name="pool" id="pool" checked>
                   <label for="pool">Бассеин</label>
@@ -71,7 +71,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="catalog-filters-group">
+            <fieldset class="catalog-filters-group-type">
               <legend class="catalog-filter-title">Тип Жилья</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
@@ -88,44 +88,48 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="catalog-filters-group">
+            <fieldset class="catalog-filters-group-price">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-              <input type="text" name="min-cost" id="min-cost" placeholder="от" value="0">
-              <label for="min-cost" class="visually-hidden">Минимальная цена</label>
-              <input type="text" name="max-cost" id="max-cost" placeholder="до" value="9000">
-              <label for="max-cost" class="visually-hidden">Максимальная цена</label>
-              <input type="range" class="catalog-filter-slider" name="range-coast" id="range-cost" min="0" max="12000"
+              <input type="text" name="min-price" id="min-price" placeholder="от" value="0">
+              <label for="min-price" class="visually-hidden" hidden>Минимальная цена</label>
+              <input type="text" name="max-price" id="max-price" placeholder="до" value="9000">
+              <label for="max-price" class="visually-hidden" hidden>Максимальная цена</label>
+              <input type="range" class="catalog-filter-slider" name="range-price" id="range-price" min="0" max="12000"
                      value="9000">
-              <label for="range-cost" class="visually-hidden">Слайдер выбора цены</label>
+              <label for="range-price" class="visually-hidden">Слайдер выбора цены</label>
             </fieldset>
-            <button type="submit" class="button button-apply-filters">Применить</button>
-            <button type="reset" class="button button-reset-filters">Сбросить</button>
+            <div class="form-buttons">
+              <button type="submit" class="button button-apply-filters">Применить</button>
+              <button type="reset" class="button button-reset-filters">Сбросить</button>
+            </div>
           </form>
         </section>
       </header>
       <section class="catalog-sort">
-        <h2 class="visually-hidden">Сортировка</h2>
+        <h2 class="visually-hidden" hidden>Сортировка</h2>
         <strong class="search-results-title">Найдено гостиниц: 38</strong>
-        <select class="catalog-select" aria-label="Выбрать сортировку">
+        <select class="catalog-sort-select" aria-label="Выбрать сортировку">
           <option value="low-cost">Сначала дешёвые</option>
           <option value="high-cost">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
-        <a class="view-table view-current" href="#">
-          <img class="view-table-image" src="images/icons/view-table-icon.svg" width="16" height="14" alt="">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a class="view-slides" href="#">
-          <img class="view-slides-image" src="images/icons/view-slider-icon.svg" width="16" height="14" alt="">
-          <span class="visually-hidden">Показать слайды</span>
-        </a>
-        <a class="view-list" href="#">
-          <img class="view-list-image" src="images/icons/view-list-icon.svg" width="16" height="14" alt="">
-          <span class="visually-hidden">Показать список</span>
-        </a>
+        <div class="catalog-sort-view-buttons">
+          <a class="view-button view-current" href="#">
+            <img class="view-icon" src="images/icons/view-table-icon.svg" width="16" height="14" alt="">
+            <span class="visually-hidden" hidden>Показать карточки</span>
+          </a>
+          <a class="view-button" href="#">
+            <img class="view-icon" src="images/icons/view-slider-icon.svg" width="16" height="14" alt="">
+            <span class="visually-hidden" hidden>Показать слайды</span>
+          </a>
+          <a class="view-button" href="#">
+            <img class="view-icon" src="images/icons/view-list-icon.svg" width="16" height="14" alt="">
+            <span class="visually-hidden" hidden>Показать список</span>
+          </a>
+        </div>
       </section>
       <section class="catalog-hotels">
-        <h2 class="visually-hidden">Каталог Гостиниц</h2>
+        <h2 class="visually-hidden" hidden>Каталог Гостиниц</h2>
         <ul class="catalog-hotels-list">
           <li class="catalog-hotels-card">
             <a class="hotel-link" href="#">
@@ -199,34 +203,38 @@
         </ul>
       </section>
       <div class="decoration-line"></div>
-      <ul class="catalog-pagination">
-        <li class="catalog-pagination-item">
-          <a class="catalog-pagination-link" href="#">1</a>
-        </li>
-        <li class="catalog-pagination-item">
-          <a class="catalog-pagination-link" href="#">2</a>
-        </li>
-        <li class="catalog-pagination-item">
-          <a class="catalog-pagination-link" href="#">3</a>
-        </li>
-        <li class="catalog-pagination-item">
-          <a class="catalog-pagination-link" href="#">4</a>
-        </li>
-        <li class="catalog-pagination-item">
-          <a class="catalog-pagination-link" href="#">...
-            <span class="visually-hidden">Следующие страницы</span>
-          </a>
-        </li>
-        <li class="catalog-pagination-item">
-          <a class="catalog-pagination-link" href="#">10</a>
-        </li>
-      </ul>
-      <span class="catalog-hotels-amount">Гостиниц на странице:</span>
-      <select class="current-hotels-amount" aria-label="Количество гостиниц на странице">
-        <option value="4">4</option>
-        <option value="8">8</option>
-        <option value="16">16</option>
-      </select>
+      <div class="catalog-page-controls-container">
+        <ul class="catalog-pagination">
+          <li class="catalog-pagination-item">
+            <a class="catalog-pagination-link" href="#">1</a>
+          </li>
+          <li class="catalog-pagination-item">
+            <a class="catalog-pagination-link" href="#">2</a>
+          </li>
+          <li class="catalog-pagination-item">
+            <a class="catalog-pagination-link" href="#">3</a>
+          </li>
+          <li class="catalog-pagination-item">
+            <a class="catalog-pagination-link" href="#">4</a>
+          </li>
+          <li class="catalog-pagination-item">
+            <a class="catalog-pagination-link" href="#">...
+              <span class="visually-hidden">Следующие страницы</span>
+            </a>
+          </li>
+          <li class="catalog-pagination-item">
+            <a class="catalog-pagination-link" href="#">10</a>
+          </li>
+        </ul>
+        <div class="amount-controls-container">
+          <span class="catalog-hotels-amount">Гостиниц на странице:</span>
+          <select class="current-hotels-amount" aria-label="Количество гостиниц на странице">
+            <option value="4">4</option>
+            <option value="8">8</option>
+            <option value="16">16</option>
+          </select>
+        </div>
+      </div>
       <section class="subscribe catalog-subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -239,24 +247,24 @@
     </main>
     <footer class="page-footer">
       <section class="footer-contacts">
-        <h2 class="visually-hidden">Социальные сети</h2>
+        <h2 class="visually-hidden" hidden>Социальные сети</h2>
         <ul class="footer-contacts-list">
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
-              <span class="visually-hidden">Вконтакте</span>
+              <span class="visually-hidden" hidden>Вконтакте</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://t.me/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
-              <span class="visually-hidden">Телеграм</span>
+              <span class="visually-hidden" hidden>Телеграм</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
               <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
-              <span class="visually-hidden">YouTube</span>
+              <span class="visually-hidden" hidden>YouTube</span>
             </a>
           </li>
         </ul>
