--- a/catalog.html
+++ b/catalog.html
@@ -219,7 +219,7 @@
           </li>
           <li class="catalog-pagination-item">
             <a class="catalog-pagination-link" href="#">...
-              <span class="visually-hidden">Следующие страницы</span>
+              <span class="visually-hidden" hidden>Следующие страницы</span>
             </a>
           </li>
           <li class="catalog-pagination-item">
