--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link search-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link favorite-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -40,11 +40,11 @@
     </header>
     <main class="main-index">
       <section class="welcome">
-        <h1 class="visually-hidden" hidden>Добро пожаловать в Седону</h1>
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
         <img class="welcome-logo" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в прекрасную Седону &quot;ибо Гранд Каньен отстой&quot;.">
       </section>
       <section class="advantages" id="advantages">
-        <h2 class="visually-hidden" hidden>Преимущества Седоны</h2>
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
         <strong class="advantages-promo">Седона — небольшой городок в Аризоне, заслуживающий большего!</strong>
         <p class="advantages-subtitle">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
@@ -108,24 +108,24 @@
     </main>
     <footer class="page-footer">
       <section class="footer-contacts">
-        <h2 class="visually-hidden" hidden>Социальные сети</h2>
+        <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-contacts-list">
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
-              <span class="visually-hidden" hidden>Вконтакте</span>
+              <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://t.me/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
-              <span class="visually-hidden" hidden>Телеграм</span>
+              <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
               <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
-              <span class="visually-hidden" hidden>YouTube</span>
+              <span class="visually-hidden">YouTube</span>
             </a>
           </li>
         </ul>
