--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
+          <li class="navigation-user-item">
             <a class="navigation-link search-link" href="#">
               <span class="visually-hidden">Поиск.</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-user-item">
             <a class="navigation-link favorite-link" href="#">
               <span class="visually-hidden">Избранное.</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-user-item">
             <a class="button" href="#offer">Хочу сюда!</a>
           </li>
         </ul>
@@ -111,19 +111,19 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-contacts-list">
           <li class="footer-contacts-item">
-            <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
+            <a class="footer-contacts-vk-link" href="https://vk.com/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="14" alt="">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="footer-contacts-item">
-            <a class="footer-contacts-link" href="https://t.me/htmlacademy">
-              <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="16" alt="">
+            <a class="footer-contacts-telegram-link" href="https://t.me/htmlacademy">
+              <img class="footer-contact-icon " src="images/icons/telegram-icon.svg" width="18" height="16" alt="">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="footer-contacts-item">
-            <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="footer-contacts-youtube-link" href="https://www.youtube.com/user/htmlacademyru">
               <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
               <span class="visually-hidden">YouTube</span>
             </a>
