--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
         <h1 class="catalog-title">Гостиницы Седоны</h1>
         <ol class="breadcrumbs">
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html">
+            <a class="breadcrumbs-link home-link" href="index.html">
               <span class="visually-hidden">Главная</span>
             </a>
           </li>
@@ -52,7 +52,7 @@
           </li>
         </ol>
         <section class="catalog-filters">
-          <h2 class="visually-hidden" hidden>Фильтры</h2>
+          <h2 class="visually-hidden">Фильтры</h2>
           <form class="catalog-filters-form" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="catalog-filters-group-infrastructure">
               <legend class="catalog-filter-title">Инфраструктура</legend>
@@ -91,9 +91,9 @@
             <fieldset class="catalog-filters-group-price">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
               <input type="text" name="min-price" id="min-price" placeholder="от" value="0">
-              <label for="min-price" class="visually-hidden" hidden>Минимальная цена</label>
+              <label for="min-price" class="visually-hidden">Минимальная цена</label>
               <input type="text" name="max-price" id="max-price" placeholder="до" value="9000">
-              <label for="max-price" class="visually-hidden" hidden>Максимальная цена</label>
+              <label for="max-price" class="visually-hidden">Максимальная цена</label>
               <input type="range" class="catalog-filter-slider" name="range-price" id="range-price" min="0" max="12000"
                      value="9000">
               <label for="range-price" class="visually-hidden">Слайдер выбора цены</label>
@@ -106,7 +106,7 @@
         </section>
       </header>
       <section class="catalog-sort">
-        <h2 class="visually-hidden" hidden>Сортировка</h2>
+        <h2 class="visually-hidden">Сортировка</h2>
         <strong class="search-results-title">Найдено гостиниц: 38</strong>
         <select class="catalog-sort-select" aria-label="Выбрать сортировку">
           <option value="low-cost">Сначала дешёвые</option>
@@ -116,40 +116,46 @@
         <div class="catalog-sort-view-controls">
           <a class="view-button view-current" href="#">
             <img class="view-icon" src="images/icons/view-table-icon.svg" width="16" height="14" alt="">
-            <span class="visually-hidden" hidden>Показать карточки</span>
+            <span class="visually-hidden">Показать карточки</span>
           </a>
           <a class="view-button" href="#">
             <img class="view-icon" src="images/icons/view-slider-icon.svg" width="16" height="14" alt="">
-            <span class="visually-hidden" hidden>Показать слайды</span>
+            <span class="visually-hidden">Показать слайды</span>
           </a>
           <a class="view-button" href="#">
             <img class="view-icon" src="images/icons/view-list-icon.svg" width="16" height="14" alt="">
-            <span class="visually-hidden" hidden>Показать список</span>
+            <span class="visually-hidden">Показать список</span>
           </a>
         </div>
       </section>
       <section class="catalog-hotels">
-        <h2 class="visually-hidden" hidden>Каталог Гостиниц</h2>
+        <h2 class="visually-hidden">Каталог Гостиниц</h2>
         <ul class="catalog-hotels-list">
-          <li class="catalog-hotels-card">
-            <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-1.jpg" width="300" height="211"
+          <li class="catalog-hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="images/catalog/hotel-1.jpg" width="300" height="211"
                    alt="Гостиница Amara Resort & Spa">
-              <h3 class="hotel-title">Amara Resort & Spa</h3>
+              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 4000 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-add-favorite" type="button">в избранное</button>
-            <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <div class="hotel-card-information">
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 4000 ₽</span>
             </div>
-            <b class="hotel-rating">Рейтинг: 8,5</b>
+            <div class="hotel-card-buttons">
+              <a class="button button-details" href="#">подробнее</a>
+              <button class="button button-add-favorite" type="button">в избранное</button>
+            </div>
+            <div class="hotel-rating">
+              <div class="hotel-card-stars-rate">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              </div>
+              <b class="hotel-card-rating">Рейтинг: 8,5</b>
+            </div>
           </li>
-          <li class="catalog-hotels-card">
+          <li class="catalog-hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-2.jpg" width="300" height="211"
                    alt="Гостиница Villas at Poco Diablo">
@@ -157,8 +163,10 @@
             </a>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 5000 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-in-favorite" type="button">в избранном</button>
+            <div class="hotel-card-buttons">
+              <a class="button button-details" href="#">подробнее</a>
+              <button class="button button-in-favorite" type="button">в избранном</button>
+            </div>
             <div class="hotel-stars-rate">
               <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
               <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
@@ -167,7 +175,7 @@
             </div>
             <b class="hotel-rating">Рейтинг: 9,2</b>
           </li>
-          <li class="catalog-hotels-card">
+          <li class="catalog-hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-3.jpg" width="300" height="211"
                    alt="Гостиница Desert Quail Inn">
@@ -175,8 +183,10 @@
             </a>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 2500 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-add-favorite" type="button">в избранное</button>
+            <div class="hotel-card-buttons">
+              <a class="button button-details" href="#">подробнее</a>
+              <button class="button button-in-favorite" type="button">в избранном</button>
+            </div>
             <div class="hotel-stars-rate">
               <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды.">
               <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
@@ -184,7 +194,7 @@
             </div>
             <b class="hotel-rating">Рейтинг: 6,9</b>
           </li>
-          <li class="catalog-hotels-card">
+          <li class="catalog-hotel-card">
             <a class="hotel-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" width="300" height="211"
                    alt="Гостиница GreenTree Inn">
@@ -192,8 +202,10 @@
             </a>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 1500 ₽</span>
-            <a class="button button-details" href="#">подробнее</a>
-            <button class="button button-add-favorite" type="button">в избранное</button>
+            <div class="hotel-card-buttons">
+              <a class="button button-details" href="#">подробнее</a>
+              <button class="button button-in-favorite" type="button">в избранном</button>
+            </div>
             <div class="hotel-stars-rate">
               <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды.">
               <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
@@ -219,7 +231,7 @@
           </li>
           <li class="catalog-pagination-item">
             <a class="catalog-pagination-link" href="#">...
-              <span class="visually-hidden" hidden>Следующие страницы</span>
+              <span class="visually-hidden">Следующие страницы</span>
             </a>
           </li>
           <li class="catalog-pagination-item">
@@ -247,24 +259,24 @@
     </main>
     <footer class="page-footer">
       <section class="footer-contacts">
-        <h2 class="visually-hidden" hidden>Социальные сети</h2>
+        <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-contacts-list">
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://vk.com/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/vk-icon.svg" width="24" height="15" alt="">
-              <span class="visually-hidden" hidden>Вконтакте</span>
+              <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://t.me/htmlacademy">
               <img class="footer-contact-icon" src="images/icons/telegram-icon.svg" width="18" height="17" alt="">
-              <span class="visually-hidden" hidden>Телеграм</span>
+              <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
           <li class="footer-contacts-item">
             <a class="footer-contacts-link" href="https://www.youtube.com/user/htmlacademyru">
               <img class="footer-contact-icon" src="images/icons/youtube-icon.svg" width="22" height="17" alt="">
-              <span class="visually-hidden" hidden>YouTube</span>
+              <span class="visually-hidden">YouTube</span>
             </a>
           </li>
         </ul>
