--- a/catalog.html
+++ b/catalog.html
@@ -22,17 +22,17 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
+          <li class="navigation-user-item">
+            <a class="navigation-link search-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
+          <li class="navigation-user-item">
+            <a class="navigation-link favorite-link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
+          <li class="navigation-user-item">
             <a class="button" href="#">Хочу сюда!</a>
           </li>
         </ul>
@@ -108,22 +108,19 @@
       <section class="catalog-sort">
         <h2 class="visually-hidden">Сортировка</h2>
         <strong class="search-results-title">Найдено гостиниц: 38</strong>
-        <select class="catalog-sort-select" aria-label="Выбрать сортировку">
+        <select class="catalog-select catalog-sort-select" aria-label="Выбрать сортировку">
           <option value="low-cost">Сначала дешёвые</option>
           <option value="high-cost">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
         <div class="catalog-sort-view-controls">
-          <a class="view-button view-current" href="#">
-            <img class="view-icon" src="images/icons/view-table-icon.svg" width="16" height="14" alt="">
+          <a class="button-view table-view-button view-current" href="#">
             <span class="visually-hidden">Показать карточки</span>
           </a>
-          <a class="view-button" href="#">
-            <img class="view-icon" src="images/icons/view-slider-icon.svg" width="16" height="14" alt="">
+          <a class="button-view slider-view-button" href="#">
             <span class="visually-hidden">Показать слайды</span>
           </a>
-          <a class="view-button" href="#">
-            <img class="view-icon" src="images/icons/view-list-icon.svg" width="16" height="14" alt="">
+          <a class="button-view list-view-button" href="#">
             <span class="visually-hidden">Показать список</span>
           </a>
         </div>
@@ -156,61 +153,72 @@
             </div>
           </li>
           <li class="catalog-hotel-card">
-            <a class="hotel-link" href="#">
+            <a class="hotel-card-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-2.jpg" width="300" height="211"
                    alt="Гостиница Villas at Poco Diablo">
               <h3 class="hotel-title">Villas at Poco Diablo</h3>
             </a>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 5000 ₽</span>
+            <div class="hotel-card-information">
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 5000 ₽</span>
+            </div>
             <div class="hotel-card-buttons">
               <a class="button button-details" href="#">подробнее</a>
               <button class="button button-in-favorite" type="button">в избранном</button>
             </div>
-            <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <div class="hotel-rating">
+              <div class="hotel-card-stars-rate">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды.">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              </div>
+              <b class="hotel-card-rating">Рейтинг: 9,2</b>
             </div>
-            <b class="hotel-rating">Рейтинг: 9,2</b>
           </li>
           <li class="catalog-hotel-card">
-            <a class="hotel-link" href="#">
-              <img class="hotel-image" src="images/catalog/hotel-3.jpg" width="300" height="211"
-                   alt="Гостиница Desert Quail Inn">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-image" src="images/catalog/hotel-3.jpg" width="300" height="211" alt="Гостиница Desert Quail Inn">
               <h3 class="hotel-title">Desert Quail Inn</h3>
             </a>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 2500 ₽</span>
+            <div class="hotel-card-information">
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 2500 ₽</span>
+            </div>
             <div class="hotel-card-buttons">
               <a class="button button-details" href="#">подробнее</a>
               <button class="button button-in-favorite" type="button">в избранном</button>
             </div>
-            <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <div class="hotel-rating">
+              <div class="hotel-card-stars-rate">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды.">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              </div>
+              <b class="hotel-card-rating">Рейтинг: 6,9</b>
             </div>
-            <b class="hotel-rating">Рейтинг: 6,9</b>
           </li>
           <li class="catalog-hotel-card">
-            <a class="hotel-link" href="#">
+            <a class="hotel-card-link" href="#">
               <img class="hotel-image" src="images/catalog/hotel-4.jpg" width="300" height="211"
                    alt="Гостиница GreenTree Inn">
               <h3 class="hotel-title">GreenTree Inn</h3>
             </a>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 1500 ₽</span>
+            <div class="hotel-card-information">
+              <span class="hotel-card-type">Гостиница</span>
+              <span class="hotel-card-price">От 1500 ₽</span>
+            </div>
             <div class="hotel-card-buttons">
               <a class="button button-details" href="#">подробнее</a>
               <button class="button button-in-favorite" type="button">в избранном</button>
             </div>
-            <div class="hotel-stars-rate">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды.">
-              <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+            <div class="hotel-rating">
+              <div class="hotel-card-stars-rate">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды.">
+                <img class="rate-star" src="images/icons/star-icon.svg" width="18" height="17" alt="">
+              </div>
+              <b class="hotel-card-rating">Рейтинг: 5,0</b>
             </div>
-            <b class="hotel-rating">Рейтинг: 5,0</b>
           </li>
         </ul>
       </section>
@@ -218,29 +226,29 @@
       <div class="catalog-pages-controls">
         <ul class="catalog-pagination">
           <li class="catalog-pagination-item">
-            <a class="catalog-pagination-link" href="#">1</a>
+            <a class="button pagination-button pagination-button-current-page" href="#">1</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="catalog-pagination-link" href="#">2</a>
+            <a class="button pagination-button" href="#">2</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="catalog-pagination-link" href="#">3</a>
+            <a class="button pagination-button" href="#">3</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="catalog-pagination-link" href="#">4</a>
+            <a class="button pagination-button" href="#">4</a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="catalog-pagination-link" href="#">...
+            <a class="button pagination-button" href="#">...
               <span class="visually-hidden">Следующие страницы</span>
             </a>
           </li>
           <li class="catalog-pagination-item">
-            <a class="catalog-pagination-link" href="#">10</a>
+            <a class="button pagination-button" href="#">10</a>
           </li>
         </ul>
         <div class="catalog-amount-controls">
-          <span class="catalog-hotels-amount">Гостиниц на странице:</span>
-          <select class="current-hotels-amount" aria-label="Количество гостиниц на странице">
+          <span class="catalog-hotels-amount-text">Гостиниц на странице:</span>
+          <select class="catalog-select hotels-amount-select" aria-label="Количество гостиниц на странице">
             <option value="4">4</option>
             <option value="8">8</option>
             <option value="16">16</option>
@@ -251,7 +259,7 @@
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="email">e-mail</label>
+          <label class="visually-hidden" for="email">e-mail</label>
           <input type="email" id="email" name="email" placeholder="Ваш e-mail">
           <button type="submit" class="button button-subscribe">Подписаться</button>
         </form>
